# Projeto_02_-_Implementacao_Paralela_de_Blockchain_-_Computacao_Paralela_-_2023-2

./: CMakeLists.txt  CompararSaidas.bash  CompararSaidasSha256.bash  Compilar.bash  Compilar_parcode.bash  Cronometrar.bash  CronometrarVisual.bash  CronometrarVisualTimeout.bash  Executar.bash  Limpar.bash  README.EN.md  README.md  Testar.bash  TestarRapido.bash  TestarRapidoVariasVezes.bash  Testar_parcode.bash  readme.txt
CUDA para GPU/: CMakeLists.txt  Compilar.bash  Compilar_parcode.bash  Limpar.bash  TestSha256.cpp  sha256.cu
OpenMP para GPU/: Blockchain.cpp  CMakeLists.txt  Compilar_parcode.bash  sha256.cpp  sha256.h
OpenMP para multicore/: CMakeLists.txt  Compilar.bash  Compilar_parcode.bash  main.cpp  sha256.cpp
Sequencial/: Block.cpp  CMakeLists.txt  Compilar.bash  Compilar_parcode.bash  Limpar.bash
